// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`docs ls default browser matches the current output 1`] = `
"# Docs

## /fixture/home/.ngents/docs/architecture/
 - global-only.md
   Global architecture-only notes.

## /fixture/home/.ngents/docs/browser/
 - cdp.md
   Need to start, stop, or inspect the local Chrome CDP session.

## /fixture/repo/docs/
 - long-summary.md
   This summary is intentionally longer than sixty-four characters so compact views must truncate it.

 - web-fetching.md
   Need to fetch web content for research.

## /fixture/repo/docs/architecture/
 - local-only.md
   Local architecture-only notes.

 - main.md
   Need the main project architecture.
"
`;

exports[`docs ls selector browser matches the current output 1`] = `
"# Docs: architecture
Topic available: docs topic architecture

## /fixture/home/.ngents/docs/architecture/
 - global-only.md
   Global architecture-only notes.

## /fixture/repo/docs/architecture/
 - local-only.md
   Local architecture-only notes.

 - main.md
   Need the main project architecture.
"
`;
